2005-01-26  David Bateman <dbateman@free.fr>

	* Array.cc (Array<T>::insert): Handle generic case, not just
	special case for fast concatenation.

2005-01-18  John W. Eaton  <jwe@octave.org>

	* mx-inlines.cc (MX_ND_REDUCTION): Delete RET_ELT_TYPE arg.
	Change all uses.  Use VAL instead of RET_ELT_TYPE when resizing.

	* dNDArray.cc (NDArray::any): NaN does not count as a nonzero value.
	* CNDArray.cc (ComplexNDArray::any): Likewise.

2005-01-18  David Bateman <dbateman@free.fr>

	* Array.cc (Array<T>::insert (const Array<T>&, const Array<int>&)):
	Modify calculation of number elements to skip between copied blocks.

2005-01-18  John W. Eaton  <jwe@octave.org>

	* idx-vector.cc (IDX_VEC_REP::freeze): Call warning handler, not
	error handler, to warn about resizing.

2004-12-27  Martin Dalecki  <martin@dalecki.de>

	* Array.cc, ArrayN.cc, base-lu.cc, boolMatrix.cc, boolNDArray.cc,
	Bounds.cc, CColVector.cc, CDiagMatrix.cc, chMatrix.cc,
	chNDArray.cc, CMatrix.cc, CmplxAEPBAL.cc, CmplxCHOL.cc,
	CmplxDET.cc, CmplxHESS.cc, CmplxLU.cc, CmplxQR.cc, CmplxQRP.cc,
	CmplxSCHUR.cc, CmplxSVD.cc, CNDArray.cc, CollocWt.cc,
	CRowVector.cc, DASPK.cc, DASRT.cc, DASSL.cc, dbleAEPBAL.cc,
	dbleCHOL.cc, dbleDET.cc, dbleHESS.cc, dbleLU.cc, dbleQR.cc,
	dbleQRP.cc, dbleSCHUR.cc, dbleSVD.cc, dColVector.cc,
	dDiagMatrix.cc, DiagArray2.cc, dMatrix.cc, dNDArray.cc,
	dRowVector.cc, EIG.cc, FEGrid.cc, idx-vector.cc, int16NDArray.cc,
	int32NDArray.cc, int64NDArray.cc, int8NDArray.cc, intNDArray.cc,
	LinConst.cc, LPsolve.cc, LSODE.cc, MArray2.cc, MArray.cc,
	MArrayN.cc, MDiagArray2.cc, NLEqn.cc, oct-alloc.cc, ODES.cc,
	ODESSA.cc, Quad.cc, Range.cc, so-array.cc, uint16NDArray.cc,
	uint32NDArray.cc, uint64NDArray.cc, uint8NDArray.cc:
	Delete #pragma implementation.

	* Array2.h, Array3.h, Array.h, ArrayN.h, base-lu.h, boolMatrix.h,
	boolNDArray.h, Bounds.h, CColVector.h, CDiagMatrix.h, chMatrix.h,
	chNDArray.h, CMatrix.h, CmplxAEPBAL.h, CmplxCHOL.h, CmplxDET.h,