@@ -208,8 +208,11 @@ freeze (Array<idx_vector>& ra_idx, const dim_vector& dimensions, int resize_ok)
 
   retval.resize (n);
 
+  static const char *tag[3] = { "row", "column", 0 };
+
   for (int i = 0; i < n; i++)
-    retval(i) = ra_idx(i).freeze (dimensions(i), "XXX FIXME XXX", resize_ok);
+    retval(i) = ra_idx(i).freeze (dimensions(i), tag[i < 2 ? i : 3],
+				  resize_ok);
 
   return retval;
 }
